--- a/config-test.yml
+++ b/config-test.yml
@@ -1,1 +1,16 @@
-name: test
+ server:
+  port: 3355
+
+spring:
+  application:
+    name: config-client
+  cloud:
+    config:
+      label: config
+      name: config-client
+      profile: dev
+      uri: http://localhost:3344
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka7001.com:7001/eureka
